Fix small issue with medium buttons on Safari
NGFW-11664 #code-completed

--- a/uvm/servlets/admin/sass/base.scss
+++ b/uvm/servlets/admin/sass/base.scss
@@ -21,6 +21,13 @@ cite {
     max-width: none;
 }
 
+.x-btn-icon-right > .x-btn-inner-default-medium,
+.x-btn-icon-left > .x-btn-inner-default-medium,
+.x-btn-icon-right > .x-btn-inner-default-toolbar-medium,
+.x-btn-icon-left > .x-btn-inner-default-toolbar-medium {
+    max-width: none;
+}
+
 .x-btn-icon-el {
     background-size: contain;
 }
